# hazard

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  CONTRIBUTING.md  HAZARD.md  Pipfile  README.md  credentials.env  graph.cwl  hazard_workflow.cwl  hazard_workflow_input_example.yml  mkdocs.yml  pyproject.toml  tox.ini  workflow.cwl
.github/workflows/: bootstrap.yaml  builds.yaml  ci.yml  notebooks.yaml  release.yaml  test-release.yaml
.ipynb_checkpoints/: Pipfile-checkpoint
dockerfiles/: Dockerfile
docs/: index.md
docs/summaries/chronic_heat/osc/: degree_days.md
docs/summaries/fire/jupiter/: fire_probability.md
inventories/hazard/: inventory.json
notebooks/: hazard_datsets_storage.ipynb  hazard_indicator_intro.ipynb  launcher.ipynb  ukcp18_hazard_ DaysTasAboveIndicator.ipynb  ukcp18_hazard_DaysTasAboveIndicator.ipynb
notebooks/models/: runner_drought.ipynb
notebooks/onboarding/: onboard_ESP_GOV_flood.ipynb  onboard_JRC_flood.ipynb
src/: jrc_coastalflood.py  onboard_ESP_GOV_flood.ipynb  onboard_JRC_flood.ipynb  onboard_flood_coastal_JRC.ipynb  onboard_flood_river_JRC.ipynb  onboard_wind_ECB.ipynb
src/hazard/: __init__.py  cli.py  docs_store.py  indicator_model.py  inventory.py  onboarder.py  protocols.py  services.py  task_runner.py
src/hazard/models/: cmip6_model_selection.md  days_tas_above.md  days_tas_above.py  degree_days.md  degree_days.py  drought_index.md  drought_index.py  multi_year_average.py  prechunker.py  water_temp.md  water_temp.py  wet_bulb_globe_temp.md  wet_bulb_globe_temp.py  work_loss.md  work_loss.py
src/hazard/onboard/: alpha_klima_wildfire.py  alpha_klima_wildfire_v1_1.py  cds_wildfire.py  csm_subsidence.md  csm_subsidence.py  ecb_wind.py  ethz_litpop.py  flopros_flood.md  flopros_flood.py  general_onboarding.py  global_seismic_hazard_v2023_1.py  ipcc_drought.py  iris_wind.md  iris_wind.py  jrc_coastalflood.py  jrc_landslides.py  jrc_riverflood.py  jrc_subsidence.py  jupiter.py  osc_chronic_heat.py  probabilistic_european_wildfire.py  rain_european_winter_storm.md  rain_european_winter_storm.py  storm_wind.py  tudelft_coastalflood.py  tudelft_flood.md  tudelft_flood.py  tudelft_flood_sop.md  tudelft_riverflood.py  tudelft_wildfire.py  tudelft_wind.py  wisc_european_winter_storm.md  wisc_european_winter_storm.py  wri_aqueduct_flood.md  wri_aqueduct_flood.py  wri_aqueduct_water_risk.md  wri_aqueduct_water_risk.py  wri_aqueduct_waterrisk.md  wri_aqueduct_waterrisk.py  wri_waterstress.py
src/hazard/sources/: __init__.py  nex_gddp_cmip6.md  nex_gddp_cmip6.py  osc_zarr.py  ukcp18.md  ukcp18.py  ukcp18_rcp85.py  wri_aqueduct.py
src/hazard/utilities/: cli_utilities.py  description_utilities.py  download_utilities.py  inventory.py  map_utilities.py  onboard_all.py  onboard_osc_heat.py  onboard_wri.py  s3_utilities.py  stac_utilities.py  tiles.py  xarray_utilities.py  zarr_utilities.py
src/inventories/hazard/: inventory.json
src/inventories/hazard/stac/: collection.json
src/test/: test_degree_days.py  test_drought_indicators.py  test_heat_indicators.py  test_inventory.py  test_onboarding.py  test_temperature_indicators.py  test_tile_creation.py  test_utilities.py  test_water_temp_indicators.py  test_wind_onboarding.py  utilities.py
tests/: conftest.py  drought_indicators_test.py  heat_indicators_test.py  inventory_test.py  onboarding_test.py  temperature_indicators_test.py  test_drought_indicators.py  test_heat_indicators.py  test_inventory.py  test_onboarding.py  test_temperature_indicators.py  test_tile_creation.py  test_utilities.py  test_water_temp_indicators.py  test_wind_onboarding.py  tile_creation_test.py  utilities.py  utilities_test.py  water_temp_indicators_test.py  wind_onboarding_test.py
tests/test_input/drought/: spei_test.json
